Change font to Jua

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <title>Jyumami</title>
 </head>
 
@@ -38,7 +39,7 @@
 
         <!-- Main content of the page -->
         <div class="mainbody">
-            <div class="page-title">Kyoto</div>
+            <div class="page-title"><img src="img/tokyo.png"></div>
 
             <!-- Two column table -->
             <div class="content">
