--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             <!-- Two column table -->
             <div class="content">
                 <div class="column">
-                    Column 1
+                    <img src="img/tile1.jpeg">
+                    <div class="overlay" style="top: 50%; left: 90%;">
+                        <img src="img/tile1.jpeg">
+                    </div>
                 </div>
                 <div class="column">
                     Column 2
@@ -57,7 +60,7 @@
                     Column 1
                 </div>
                 <div class="column">
-                    Column 2
+                    <img src="img/tile1.jpeg">
                 </div>
                 <div class="column">
                     Column 3
@@ -67,7 +70,7 @@
             <!-- Four column table -->
             <div class="content">
                 <div class="column">
-                    Column 1
+                    <img src="img/tile1.jpeg">
                 </div>
                 <div class="column">
                     Column 2
@@ -80,9 +83,6 @@
                     <p>Column 4</p>
                     <p>Column 4</p>
                     <p>Column 4</p>
-                    <div class="overlay">
-                        Test
-                    </div>
                 </div>
             </div>
         
