Added rounded containers

--- a/index.html
+++ b/index.html
@@ -39,20 +39,45 @@
 
         <!-- Main content of the page -->
         <div class="mainbody">
+
+            <!-- Tokyo -->
             <div class="page-title"><img src="img/tokyo.png"></div>
 
+        <div class="category-container">
+
+            <!-- Where we stayed -->
+            <div class="category-stay">Where we stayed</div>
+
             <!-- Two column table -->
+            <!-- Row 1 -->
             <div class="content">
                 <div class="column">
-                    <img src="img/tile1.jpeg">
+                    <img src="img/DSC01614.jpg">
                     <div class="overlay" style="top: 50%; left: 90%;">
                         <img src="img/tile1.jpeg">
                     </div>
                 </div>
                 <div class="column">
-                    Column 2
+                    <img src="img/IMG_3605.png">
                 </div>
             </div>
+            <!-- Row 2 -->
+            <div class="content">
+                <div class="column">
+                    Text goes here
+                </div>
+                <div class="column">
+                    <h1>Hotel The Knot Tokyo</h1><br>
+                    This boutique hotel, tucked in the quieter side...
+                </div>
+            </div>
+
+        </div>
+
+        <div class="category-container-green">
+
+            <!-- What we ate -->
+            <div class="category-stay">What we ate</div>
 
             <!-- Three column table -->
             <div class="content">
@@ -66,6 +91,13 @@
                     Column 3
                 </div>
             </div>
+
+        </div>
+
+        <div class="category-container">
+
+            <!-- Where we shopped -->
+            <div class="category-shop">Where we shopped</div>
 
             <!-- Four column table -->
             <div class="content">
@@ -85,6 +117,8 @@
                     <p>Column 4</p>
                 </div>
             </div>
+
+        </div>
         
         <!-- End of main content-->
         </div>
