Added food section

--- a/index.html
+++ b/index.html
@@ -52,23 +52,41 @@
             <!-- Row 1 -->
             <div class="content">
                 <div class="column">
+                    <!-- Col 1 -->
                     <img src="img/DSC01614.jpg">
-                    <div class="overlay" style="top: 50%; left: 90%;">
-                        <img src="img/tile1.jpeg">
-                    </div>
                 </div>
                 <div class="column">
+                    <!-- Col 2 -->
                     <img src="img/IMG_3605.png">
+                    <div class="overlay" style="top: 80%; left: 70%;">
+                        <img src="img/tile1.jpeg">
+                    </div>
                 </div>
             </div>
             <!-- Row 2 -->
             <div class="content">
                 <div class="column">
-                    Text goes here
+                    <!-- Col 1 -->
+                    <div class="name">
+                        <img src="img/triangle.png">&nbsp;
+                        <h1>Insert name here</h1>
+                    </div>
+                    <div class="description">
+                        Insert description here
+                    </div>
                 </div>
                 <div class="column">
-                    <h1>Hotel The Knot Tokyo</h1><br>
-                    This boutique hotel, tucked in the quieter side...
+                    <!-- Col 2 -->
+                    <div class="name">
+                            <img src="img/triangle.png">&nbsp;
+                            <h1>Hotel The Knot Tokyo</h1>
+                    </div>
+                    <div class="description">
+                        This boutique hotel, tucked in the quieter sideof lively Shinjuku, is a 20-min walk from Shinjuku station and close to Family Marty and 7-11. Cozy rooms ensure a comfortable stay, and oun the ground floor, MORE THAN Bakery tempts with fresh and unique treats, from melon pans to savory stuffed breads.
+                        <br>
+                        <br>
+                        Price per night: 110 00 ¥
+                    </div>
                 </div>
             </div>
 
@@ -80,18 +98,54 @@
             <div class="category-stay">What we ate</div>
 
             <!-- Three column table -->
+            <!-- Row 1 -->
             <div class="content">
                 <div class="column">
-                    Column 1
+                    <!-- Col 1 -->
+                    <img src="img/IMG_2055.jpeg">
                 </div>
                 <div class="column">
-                    <img src="img/tile1.jpeg">
+                    <!-- Col 2 -->
+                    <img src="img/IMG_3761.jpeg">
                 </div>
                 <div class="column">
-                    Column 3
+                    <!-- Col 3 -->
+                    <img src="img/IMG_3875.jpeg">
                 </div>
             </div>
-
+            <!-- Row 2 -->
+            <div class="content">
+                <div class="column">
+                    <!-- Col 1 -->
+                    <div class="name">
+                        <img src="img/triangle.png">&nbsp;
+                        <h1>Com Crepe Harajuku</h1>
+                    </div>
+                    <div class="description">
+                        Insert description here
+                    </div>
+                </div>
+                <div class="column">
+                    <!-- Col 2 -->
+                    <div class="name">
+                        <img src="img/triangle.png">&nbsp;
+                        <h1>Melon Latte from 7-11</h1>
+                    </div>
+                    <div class="description">
+                        Insert description here
+                    </div>
+                </div>
+                <div class="column">
+                    <!-- Col 3 -->
+                    <div class="name">
+                        <img src="img/triangle.png">&nbsp;
+                        <h1>Matcha Maruni Stand Tsukiji</h1>
+                    </div>
+                    <div class="description">
+                        Insert description here
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="category-container">
