--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column">
                     <!-- Col 2 -->
                     <img src="img/IMG_3605.png">
-                    <div class="overlay" style="top: 80%; left: 70%;">
+                    <div class="overlay" style="bottom: -10%; right: 10%;">
                         <img src="img/tile1.jpeg">
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                     <!-- Col 1 -->
                     <div class="name">
                         <img src="img/triangle.png">&nbsp;
-                        <h1>Insert name here</h1>
+                        <h1>MORETHAN Bakery</h1>
                     </div>
                     <div class="description">
                         Insert description here
@@ -82,7 +82,11 @@
                             <h1>Hotel The Knot Tokyo</h1>
                     </div>
                     <div class="description">
-                        This boutique hotel, tucked in the quieter sideof lively Shinjuku, is a 20-min walk from Shinjuku station and close to Family Marty and 7-11. Cozy rooms ensure a comfortable stay, and oun the ground floor, MORE THAN Bakery tempts with fresh and unique treats, from melon pans to savory stuffed breads.
+                        This boutique hotel, tucked in the quieter sideof lively Shinjuku, 
+                        is a 20-min walk from Shinjuku station and close to Family Marty and 
+                        7-11. Cozy rooms ensure a comfortable stay, and oun the ground floor, 
+                        MORETHAN Bakery tempts with fresh and unique treats, from melon pans 
+                        to savory stuffed breads.
                         <br>
                         <br>
                         Price per night: 110 00 ¥
@@ -156,7 +160,7 @@
             <!-- Four column table -->
             <div class="content">
                 <div class="column">
-                    <img src="img/tile1.jpeg">
+                    Column 1
                 </div>
                 <div class="column">
                     Column 2
@@ -165,10 +169,7 @@
                     Column 3
                 </div>
                 <div class="column">
-                    <p>Column 4</p>
-                    <p>Column 4</p>
-                    <p>Column 4</p>
-                    <p>Column 4</p>
+                    Column 4
                 </div>
             </div>
 
