--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <div class="mainbody">
 
             <!-- Tokyo -->
-            <div class="page-title"><img src="img/tokyo.png"></div>
+            <div class="page-title">
+                <img src="img/tokyo.png">
+            </div>
 
         <div class="category-container">
 
@@ -179,7 +181,9 @@
         </div>
 
         <!-- Optional footer for social media links -->
-        <div class="footer">Footer</div>
+        <div class="footer">
+            Insert socials here
+        </div>
     </div>
 </body>
 
