--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <!-- Main container determines width of the page -->
     <div class="container">
+        <div class="header-image"></div>
 
         <!-- Header which remains on page as you scroll -->
         <div class="header">
