Added about page

--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <title>Jyumami</title>
 </head>
 
 <body>
     <!-- Main container determines width of the page -->
     <div class="container">
+
+        <!-- Header image -->
         <div class="header-image"></div>
 
-        <!-- Header which remains on page as you scroll -->
+        <!-- Header -->
         <div class="header">
 
             <!-- Jyumami logo and title on the left-->
@@ -30,9 +33,9 @@
             <div class="navigation">
                 <nav>
                     <ul class="horizontal-list">
-                        <li class="list-items">About</li>
-                        <li class="list-items">Recipes</li>
-                        <li class="list-items">Travel</li>
+                        <li class="list-items"><a href="about.html">About</a></li>
+                        <li class="list-items"><a href="recipes.html">Recipes</a></li>
+                        <li class="list-items"><a href="travel.html">Travel</a></li>
                     </ul>
                 </nav>
             </div>
