Change of content

--- a/index.html
+++ b/index.html
@@ -15,178 +15,25 @@
     <!-- Main container determines width of the page -->
     <div class="container">
 
-        <!-- Header image -->
-        <div class="header-image"></div>
-
-        <!-- Header -->
-        <div class="header">
-
-            <!-- Jyumami logo and title on the left-->
-            <div class="logo">
-                <a href="index.html"><img src="img/logo.png"></a>
-            </div>
-            <div class="title">
-                <a href="index.html"><img src="img/title.png"></a>
-            </div>
-            
-            <!-- About/Recipe/Travel navigation on the right -->
-            <div class="navigation">
-                <nav>
-                    <ul class="horizontal-list">
-                        <li class="list-items"><a href="about.html">About</a></li>
-                        <li class="list-items"><a href="recipes.html">Recipes</a></li>
-                        <li class="list-items"><a href="travel.html">Travel</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
 
         <!-- Main content of the page -->
         <div class="mainbody">
 
             <!-- Tokyo -->
             <div class="page-title">
-                <img src="img/tokyo.png">
+                Our Story
             </div>
 
         <div class="category-container">
-
-            <!-- Where we stayed -->
-            <div class="category-stay">Where we stayed</div>
 
             <!-- Two column table -->
             <!-- Row 1 -->
             <div class="content">
                 <div class="column">
                     <!-- Col 1 -->
-                    <img src="img/DSC01614.jpg">
-                </div>
-                <div class="column">
-                    <!-- Col 2 -->
-                    <img src="img/IMG_3605.png">
-                    <div class="overlay" style="bottom: -10%; right: 10%;">
-                        <img src="img/tile1.jpeg">
-                    </div>
+                    <img src="img/DSC01792.jpg">
                 </div>
             </div>
-            <!-- Row 2 -->
-            <div class="content">
-                <div class="column">
-                    <!-- Col 1 -->
-                    <div class="name">
-                        <img src="img/triangle.png">&nbsp;
-                        <h1>MORETHAN Bakery</h1>
-                    </div>
-                    <div class="description">
-                        Insert description here
-                    </div>
-                </div>
-                <div class="column">
-                    <!-- Col 2 -->
-                    <div class="name">
-                            <img src="img/triangle.png">&nbsp;
-                            <h1>Hotel The Knot Tokyo</h1>
-                    </div>
-                    <div class="description">
-                        This boutique hotel, tucked in the quieter sideof lively Shinjuku, 
-                        is a 20-min walk from Shinjuku station and close to Family Marty and 
-                        7-11. Cozy rooms ensure a comfortable stay, and oun the ground floor, 
-                        MORETHAN Bakery tempts with fresh and unique treats, from melon pans 
-                        to savory stuffed breads.
-                        <br>
-                        <br>
-                        Price per night: 110 00 ¥
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="category-container-green">
-
-            <!-- What we ate -->
-            <div class="category-stay">What we ate</div>
-
-            <!-- Three column table -->
-            <!-- Row 1 -->
-            <div class="content">
-                <div class="column">
-                    <!-- Col 1 -->
-                    <img src="img/IMG_2055.jpeg">
-                </div>
-                <div class="column">
-                    <!-- Col 2 -->
-                    <img src="img/IMG_3761.jpeg">
-                </div>
-                <div class="column">
-                    <!-- Col 3 -->
-                    <img src="img/IMG_3875.jpeg">
-                </div>
-            </div>
-            <!-- Row 2 -->
-            <div class="content">
-                <div class="column">
-                    <!-- Col 1 -->
-                    <div class="name">
-                        <img src="img/triangle.png">&nbsp;
-                        <h1>Com Crepe Harajuku</h1>
-                    </div>
-                    <div class="description">
-                        Insert description here
-                    </div>
-                </div>
-                <div class="column">
-                    <!-- Col 2 -->
-                    <div class="name">
-                        <img src="img/triangle.png">&nbsp;
-                        <h1>Melon Latte from 7-11</h1>
-                    </div>
-                    <div class="description">
-                        Insert description here
-                    </div>
-                </div>
-                <div class="column">
-                    <!-- Col 3 -->
-                    <div class="name">
-                        <img src="img/triangle.png">&nbsp;
-                        <h1>Matcha Maruni Stand Tsukiji</h1>
-                    </div>
-                    <div class="description">
-                        Insert description here
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="category-container">
-
-            <!-- Where we shopped -->
-            <div class="category-shop">Where we shopped</div>
-
-            <!-- Four column table -->
-            <div class="content">
-                <div class="column">
-                    Column 1
-                </div>
-                <div class="column">
-                    Column 2
-                </div>
-                <div class="column">
-                    Column 3
-                </div>
-                <div class="column">
-                    Column 4
-                </div>
-            </div>
-
-        </div>
-        
-        <!-- End of main content-->
-        </div>
-
-        <!-- Optional footer for social media links -->
-        <div class="footer">
-            Insert socials here
         </div>
     </div>
 </body>
