--- a/index3.html
+++ b/index3.html
@@ -21,16 +21,18 @@
 
             <!-- Tokyo -->
             <div class="page-title">
-                
+                Our Story
             </div>
 
         <div class="category-container">
 
             <!-- Two column table -->
             <!-- Row 1 -->
-            <div class="content-fake">
-                This domain is owned by Do San Lay Inc.<br><br>
-                <a href="index3.html">Click here</a> to request a transfer of this domain.
+            <div class="content">
+                <div class="column">
+                    <!-- Col 1 -->
+                    <img src="img/DSC01792.jpg">
+                </div>
             </div>
         </div>
     </div>
