Updated to local site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- Row 1 -->
             <div class="content-fake">
                 This domain is owned by Do San Lay Inc.<br><br>
-                <a href="index3.html">Click here</a> to request a transfer of this domain.
+                <a href="http://192.168.2.16:8080/">Click here</a> to request a transfer of this domain.
             </div>
         </div>
     </div>
